--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "tslib": "^2.3.1",
+    "tsutils": "^3.21.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
