--- a/cli/package.json
+++ b/cli/package.json
@@ -15,14 +15,22 @@
     "typescript"
   ],
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node -T src/index.ts"
+  },
   "dependencies": {
     "clipanion": "^3.2.0-rc.3",
+    "ink": "^3.2.0",
+    "ink-text-input": "^4.0.1",
     "js-yaml": "^4.1.0",
     "ky": "^0.28.6",
     "openapi3-ts": "^2.0.1",
+    "react": "16.8",
     "swagger2openapi": "^7.0.8"
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.3"
+    "@types/js-yaml": "^4.0.3",
+    "@types/react": "16.8",
+    "ts-node": "^10.3.0"
   }
 }
