--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -17,7 +17,9 @@
   "author": "Fabien Bernard",
   "license": "MIT",
   "dependencies": {
+    "case": "^1.6.3",
     "lodash": "^4.17.21",
+    "openapi3-ts": "^2.0.1",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^4.4.4"
