--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "all-contrib": "all-contributors"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.12",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.9",
     "all-contributors-cli": "^6.20.0",
@@ -28,21 +29,28 @@
     "jest": "^27.2.5",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "ts-jest": "^27.0.5",
     "typescript": "^4.5.2"
   },
   "jest": {
     "projects": [
       {
-        "preset": "ts-jest",
         "displayName": "cli",
+        "transform": {
+          "^.+\\.(t|j)sx?$": [
+            "@swc/jest"
+          ]
+        },
         "testMatch": [
           "<rootDir>/cli/**/*.test.ts"
         ]
       },
       {
-        "preset": "ts-jest",
         "displayName": "plugins/typescript",
+        "transform": {
+          "^.+\\.(t|j)sx?$": [
+            "@swc/jest"
+          ]
+        },
         "testMatch": [
           "<rootDir>/plugins/typescript/**/*.test.ts"
         ]
