--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "lib",
-    "target": "es2017",
+    "target": "ES2021",
     "lib": ["ESNext"],
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
