--- a/cli/package.json
+++ b/cli/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@swc/core": "^1.2.118",
     "clipanion": "^3.2.0-rc.3",
+    "fs-extra": "^10.0.0",
     "js-yaml": "^4.1.0",
     "openapi3-ts": "^2.0.1",
     "swagger2openapi": "^7.0.8",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@swc-node/register": "^1.4.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.3"
   }
 }
