Bundle typescript plugin

--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-codegen/cli",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1",
   "description": "OpenAPI Codegen cli",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
