--- a/cli/package.json
+++ b/cli/package.json
@@ -32,6 +32,7 @@
     "@swc/core": "^1.2.118",
     "clipanion": "^3.2.0-rc.3",
     "fs-extra": "^10.0.0",
+    "got": "^12.0.0",
     "js-yaml": "^4.1.0",
     "openapi3-ts": "^2.0.1",
     "prettier": "^2.5.1",
@@ -41,6 +42,8 @@
   "devDependencies": {
     "@swc-node/register": "^1.4.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/js-yaml": "^4.0.3"
+    "@types/js-yaml": "^4.0.3",
+    "@types/nock": "^11.1.0",
+    "nock": "^13.2.1"
   }
 }
