Add prepublish script

--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -9,7 +9,8 @@
     "directory": "plugins/typescript"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.package.json"
+    "build": "tsc -p tsconfig.package.json",
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "lib",
