--- a/cli/package.json
+++ b/cli/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@openapi-codegen/cli",
-  "version": "0.0.1-alpha.7",
+  "version": "0.0.1-alpha.15",
   "description": "OpenAPI Codegen cli",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "type": "module",
   "bin": {
     "openapi-codegen": "lib/cli.js"
   },
@@ -36,6 +37,7 @@
     "js-yaml": "^4.1.0",
     "openapi3-ts": "^2.0.1",
     "prettier": "^2.5.1",
+    "slash": "^4.0.0",
     "swagger2openapi": "^7.0.8",
     "tslib": "^2.3.1"
   },
@@ -44,6 +46,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.3",
     "@types/nock": "^11.1.0",
+    "@types/slash": "^3.0.0",
     "nock": "^13.2.1"
   }
 }
