--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-codegen/typescript",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.13",
   "description": "OpenAPI Codegen typescript generators",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -33,6 +33,7 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.175"
+    "@types/lodash": "^4.14.175",
+    "@types/qs": "^6.9.7"
   }
 }
