--- a/plugins/typescript/tsconfig.json
+++ b/plugins/typescript/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
+    "module": "CommonJS",
     "lib": ["DOM"]
   },
   "include": ["src/**/*"]
