--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-codegen/typescript",
-  "version": "0.0.1-alpha.13",
+  "version": "0.0.1-alpha.19",
   "description": "OpenAPI Codegen typescript generators",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -28,12 +28,14 @@
     "case": "^1.6.3",
     "lodash": "^4.17.21",
     "openapi3-ts": "^2.0.1",
+    "pluralize": "^8.0.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.175",
+    "@types/pluralize": "^0.0.29",
     "@types/qs": "^6.9.7"
   }
 }
