--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-codegen/typescript",
-  "version": "0.0.1-alpha.19",
+  "version": "0.0.1",
   "description": "OpenAPI Codegen typescript generators",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
