--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/fabien0102/openapi-codegen",
     "directory": "plugins/typescript"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.package.json",
     "prepublishOnly": "npm run build"
