--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Build Packages
         if: ${{ steps.release.outputs.releases_created }}
         run: |
-          npm install
+          npm ci
           npx lerna bootstrap
 
       # Release Please has already incremented versions and published tags, so we just
