--- a/cli/package.json
+++ b/cli/package.json
@@ -46,6 +46,7 @@
     "openapi3-ts": "^2.0.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "rxjs": "^7.5.4",
     "slash": "^4.0.0",
     "swagger2openapi": "^7.0.8",
     "tslib": "^2.3.1"
