--- a/cli/package.json
+++ b/cli/package.json
@@ -36,6 +36,7 @@
     "@apollo/client": "^3.5.10",
     "@swc/core": "^1.2.118",
     "chalk": "^5.0.0",
+    "cli-highlight": "^2.1.11",
     "clipanion": "^3.2.0-rc.3",
     "fs-extra": "^10.0.0",
     "got": "^12.0.0",
