--- a/cli/package.json
+++ b/cli/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@swc/core": "^1.2.118",
+    "case": "^1.6.3",
     "chalk": "^5.0.0",
     "cli-highlight": "^2.1.11",
     "clipanion": "^3.2.0-rc.3",
