Fix cross-fetch dependency

--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
-    "jsx": "react"
+    "jsx": "react",
+    "lib": ["DOM"]
   },
   "include": ["src/**/*"]
 }
