--- a/cli/package.json
+++ b/cli/package.json
@@ -41,6 +41,7 @@
     "clipanion": "^3.2.0-rc.3",
     "fs-extra": "^10.0.0",
     "got": "^12.0.0",
+    "got-fetch": "^5.0.2",
     "graphql": "^15.8.0",
     "ink": "^3.2.0",
     "js-yaml": "^4.1.0",
