--- a/cli/package.json
+++ b/cli/package.json
@@ -51,7 +51,8 @@
     "rxjs": "^7.5.4",
     "slash": "^4.0.0",
     "swagger2openapi": "^7.0.8",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
