chore: fix dependencies

--- a/cli/package.json
+++ b/cli/package.json
@@ -43,12 +43,12 @@
     "clipanion": "^3.2.0-rc.10",
     "fs-extra": "^10.0.0",
     "got": "^12.0.0",
-    "got-fetch": "^5.0.2",
+    "got-fetch": "^5.1.1",
     "graphql": "^15.8.0",
     "ink": "^3.2.0",
     "js-yaml": "^4.1.0",
     "openapi3-ts": "^2.0.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "react": "^17.0.2",
     "rxjs": "^7.5.4",
     "slash": "^4.0.0",
@@ -70,6 +70,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.3",
     "@types/nock": "^11.1.0",
+    "@types/prettier": "^2.6.1",
     "@types/react": "^17.0.39",
     "@types/slash": "^3.0.0",
     "nock": "^13.2.1",
