--- a/cli/package.json
+++ b/cli/package.json
@@ -52,7 +52,7 @@
     "swagger2openapi": "^7.0.8",
     "tslib": "^2.3.1",
     "typanion": "^3.7.1",
-    "typescript": "^4.6.2"
+    "typescript": "4.8.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
