--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "build:all": "npx lerna run build",
     "all-contrib": "all-contributors"
   },
   "devDependencies": {
@@ -27,10 +28,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "jest": "^27.2.5",
-    "lerna": "^4.0.0",
+    "lerna": "^5.5.0",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "typescript": "^4.5.2"
+    "typescript": "4.8.2"
   },
   "jest": {
     "projects": [
