--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -34,7 +34,7 @@
     "pluralize": "^8.0.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
-    "typescript": "^4.5.2"
+    "typescript": "4.8.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.175",
