--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.7.4",
+    "typescript": "4.8.2",
     "vite": "^2.9.5"
   }
 }
