--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -91,6 +91,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hubertokf",
+      "name": "Huberto Kaiser Filho",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5043263?v=4",
+      "profile": "https://github.com/hubertokf",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
