Add bug reports to @antoniel

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -71,7 +71,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/17225358?v=4",
       "profile": "https://github.com/antoniel",
       "contributions": [
-        "example"
+        "example",
+        "bug"
       ]
     },
     {
