--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,6 +17,6 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 16.13.1
-      - run: yarn
-      - run: yarn test
+          node-version: 18.10.0
+      - run: npm ci
+      - run: npm test
