--- a/plugins/typescript/package.json
+++ b/plugins/typescript/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "openapi3-ts": "^2.0.1",
     "pluralize": "^8.0.0",
+    "ts-to-zod": "^3.6.1",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "4.8.2"
