--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "husky": "^7.0.2",
     "jest": "^27.2.5",
     "lerna": "^5.5.0",
-    "prettier": "^3.0.3",
-    "pretty-quick": "^3.1.1",
+    "prettier": "3.2.5",
+    "pretty-quick": "4.0.0",
+    "simple-git-hooks": "^2.9.0",
     "typescript": "4.8.2"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pretty-quick --staged"
   },
   "jest": {
     "projects": [
