--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "got": "^12.4.1",
     "husky": "^7.0.2",
-    "jest": "^27.2.5",
+    "jest": "^30.0.0-alpha.3",
     "lerna": "^5.5.0",
     "prettier": "^3.0.3",
     "pretty-quick": "^3.1.1",
