chore: Update author name in package.json files

--- a/cli/package.json
+++ b/cli/package.json
@@ -15,7 +15,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "author": "Fabien Bernard",
+  "author": "Basile Vernouillet",
   "keywords": [
     "openapi",
     "codegen",
