--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "got": "^14.2.1",
     "husky": "^9.0.11",
-    "jest": "^27.2.5",
+    "jest": "^30.0.0-alpha.1",
     "lerna": "^8.1.2",
     "prettier": "^3.2.5",
     "pretty-quick": "^4.0.0",
