--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -111,6 +111,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Cellule",
+      "name": "Michael \"Mike\" Ferris",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4157103?v=4",
+      "profile": "https://github.com/Cellule",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
