--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -20,19 +20,22 @@ jobs:
 
       # The logic below handles the npm publication:
       - name: Checkout Repository
-        if: ${{ steps.release.outputs.releases_created }}
         uses: actions/checkout@v4
+        if: ${{ steps.release.outputs.releases_created }}
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        if: ${{ steps.release.outputs.releases_created }}
       - name: Setup Node
         uses: actions/setup-node@v4
         if: ${{ steps.release.outputs.releases_created }}
         with:
-          node-version: latest
+          node-version: 20
           registry-url: "https://registry.npmjs.org"
       - name: Build Packages
         if: ${{ steps.release.outputs.releases_created }}
         run: |
-          npm ci
-          npm run build:all
+          pnpm install
+          pnpm build
 
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
