--- a/cli/package.json
+++ b/cli/package.json
@@ -25,9 +25,9 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsup src/index.ts src/cli.ts --outDir lib --format esm --watch",
-    "prebuild": "tsc --emitDeclarationOnly --declaration -p tsconfig.package.json",
+    "prebuild": "pnpm --workspace-root tsc --emitDeclarationOnly --declaration -p cli/tsconfig.package.json",
     "build": "tsup src/index.ts src/cli.ts --outDir lib --format esm",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "pnpm build"
   },
   "files": [
     "lib",
@@ -50,7 +50,7 @@
     "swagger2openapi": "^7.0.8",
     "tslib": "^2.3.1",
     "typanion": "^3.14.0",
-    "typescript": "4.8.2"
+    "typescript": "5.7.3"
   },
   "devDependencies": {
     "@swc-node/register": "^1.4.0",
