--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -9,17 +9,17 @@
     "gen:github": "openapi-codegen gen github"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.0.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@tanstack/react-query": "5.66.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@openapi-codegen/cli": "^1.5.2",
-    "@openapi-codegen/typescript": "^5.1.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "4.8.2",
-    "vite": "^2.9.5"
+    "@openapi-codegen/cli": "workspace:*",
+    "@openapi-codegen/typescript": "workspace:*",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "@vitejs/plugin-react": "4.3.4",
+    "typescript": "5.7.3",
+    "vite": "6.0.11"
   }
 }
