--- a/package.json
+++ b/package.json
@@ -7,64 +7,36 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
-  "workspaces": [
-    "cli",
-    "plugins/typescript"
-  ],
   "scripts": {
-    "test": "jest",
-    "build:all": "npx lerna run build",
+    "test": "vitest",
+    "check": "pnpm /^check:.*/",
+    "check:types": "tsc --noEmit",
+    "check:lint": "eslint .",
+    "check:prettier": "prettier --check .",
+    "fix": "pnpm /^fix:.*/",
+    "fix:lint": "eslint --fix .",
+    "fix:prettier": "prettier --write .",
+    "build": "pnpm /^build:.*/",
+    "build:plugin:ts": "pnpm --filter=@openapi-codegen/typescript build",
+    "build:cli": "pnpm --filter=@openapi-codegen/cli build",
     "all-contrib": "all-contributors"
   },
   "devDependencies": {
-    "@swc/jest": "^0.2.36",
-    "@types/jest": "^29.5.12",
+    "@eslint/js": "^9.19.0",
     "@types/node": "^20.11.30",
     "all-contributors-cli": "^6.26.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "got": "^14.2.1",
-    "husky": "^9.0.11",
-    "jest": "^30.0.0-alpha.1",
+    "husky": "^9.1.7",
     "lerna": "^8.1.9",
-    "prettier": "^3.2.5",
+    "prettier": "^3.4.2",
     "pretty-quick": "^4.0.0",
-    "typescript": "5.4.3"
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.22.0",
+    "vitest": "^3.0.4"
   },
-  "jest": {
-    "projects": [
-      {
-        "displayName": "cli",
-        "transform": {
-          "^.+\\.(t|j)sx?$": [
-            "@swc/jest",
-            {
-              "sourceMaps": true
-            }
-          ]
-        },
-        "transformIgnorePatterns": [],
-        "testMatch": [
-          "<rootDir>/cli/**/*.test.ts"
-        ]
-      },
-      {
-        "displayName": "plugins/typescript",
-        "transform": {
-          "^.+\\.(t|j)sx?$": [
-            "@swc/jest",
-            {
-              "sourceMaps": true
-            }
-          ]
-        },
-        "testMatch": [
-          "<rootDir>/plugins/typescript/**/*.test.ts"
-        ]
-      }
-    ]
-  }
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
