feat(typescript): add useTypeImports option (#314)
* feat: add option for useTypeImports

* feat(typescript): improve type import handling and remove deprecated API

* chore: run format

* chore: modify template

* chore: modify type import

* chore: change default value of useTypeImports to true

* fix: enabled useTypeImports by default.

* Add @hayawata3626 to contributor

* Fix linting

---------

Co-authored-by: Fabien Bernard <fabien0102@hotmail.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -119,6 +119,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/172711?v=4",
       "profile": "https://tverdohleb.com/",
       "contributions": ["bug", "code", "ideas"]
+    },
+    {
+      "login": "hayawata3626",
+      "name": "Isco",
+      "avatar_url": "https://avatars.githubusercontent.com/u/15213369?v=4",
+      "profile": "https://zenn.dev/watahaya",
+      "contributions": ["code"]
     }
   ],
   "contributorsPerLine": 7
