--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -40,7 +40,6 @@ jobs:
 
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
-      # See: https://github.com/lerna/lerna/tree/main/commands/publish#bump-from-package
       - name: Publish to NPM
         if: ${{ steps.release.outputs.releases_created }}
-        run: npx lerna publish from-package --no-push --no-private --no-verify-access --yes
+        run: pnpm -r --filter=!private publish --access public --no-git-checks
